# cognizance-tasks

introspection/: README.md
pset/: Pointer Capture.sb3
pset/week1/: cash.c  mario.c
task-1/: README.md  elephant.cpp
task-12/: README.md  pass.txt
task-2/: MathQuiz.java  README.md
task-3/: Cargo.toml  README.md
task-3/src/: main.rs
