[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Aghilan-A"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
select = "0.4.2"
scraper = "*"